<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingEnd="16dp"
    android:paddingStart="16dp"
    android:paddingTop="10dp">

    <Button
        android:id="@+id/SelectCity"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:text="@string/city"
        app:layout_constraintBottom_toTopOf="@+id/mapView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/start_Timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="111dp"
        android:background="@drawable/btn1_selector"
        android:text="@string/start_timer"
        android:textColor="#0000ff"
        app:layout_constraintBottom_toTopOf="@+id/request_updates"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/stop_Timer" />

    <Button
        android:id="@+id/stop_Timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="44dp"
        android:layout_marginStart="44dp"
        android:background="@drawable/btn1_selector"
        android:text="@string/stop_timer"
        android:textColor="#ff0000"
        app:layout_constraintBottom_toTopOf="@+id/remove_updates"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/remove_updates"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/btn_circle2_background"
        android:onClick="removeUpdatesButtonHandler"
        android:text="@string/finish_tracking"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/request_updates"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="88dp"
        android:background="@drawable/btn_circle_background"
        android:onClick="requestUpdatesButtonHandler"
        android:text="@string/start_tracking"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/remove_updates" />

    <com.esri.arcgisruntime.mapping.view.MapView
        android:id="@+id/mapView"
        android:layout_width="340dp"
        android:layout_height="298dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/start_Timer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SelectCity">

        <ImageView
            android:id="@+id/recenterImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="325dp"
            android:adjustViewBounds="false"
            android:contentDescription="@string/recenter_the_map"
            android:onClick="recenterMapView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/arcgisruntime_location_display_default_symbol" />
    </com.esri.arcgisruntime.mapping.view.MapView>


</android.support.constraint.ConstraintLayout>

